@@ -1,6 +1,11 @@
 Version 1.1
 ===========
 
+New features
+------------
+
+- Accidentals: sharp, natural, flat.
+
 Bugs fixed
 ----------
 
